log esteso