@@ -134,6 +134,17 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.2.5</version>
+					<configuration>
+						<argLine>--add-opens java.base/java.util=ALL-UNNAMED ${argLine}</argLine>
+						<systemPropertyVariables>
+							<postgres.mapped.port>${postgres.mapped.port}</postgres.mapped.port>
+						</systemPropertyVariables>
+					</configuration>
+				</plugin>
+				<plugin>
 					<groupId>org.jacoco</groupId>
 					<artifactId>jacoco-maven-plugin</artifactId>
 					<version>${jacoco.version}</version>
